# diskusage-rs

./: .gitignore  Cargo.toml  README.md
src/: arguments.rs  bar.rs  main.rs  style.rs
