[package]
name = "disk-usage"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.5.14", features = ["derive"] }
procfs = "0.17.0"
sysinfo = "0.33.1"
tabled = { version = "0.17.0", features = ["ansi"] }
termion = "4.0.3"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
