[package]
name = "disk-usage"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
sysinfo = "0.35.1"
tabled = { version = "0.19.0", features = ["ansi"] }


[target.'cfg(unix)'.dependencies]
procfs = "0.17.0"

[profile.release]
incremental = true
codegen-units = 1
lto = true
strip = true
panic = "abort"
