[package]
name = "diskusage"
version = "1.0.0"
edition = "2021"

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
sysinfo = "0.35.1"
tabled = { version = "0.19.0", features = ["ansi"] }

[target.'cfg(unix)'.dependencies]
procfs = "0.17.0"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.5.0"
windows = { version = "0.61.1", features = ["Win32_System_Console"] }

[profile.release]
incremental = true
codegen-units = 1
lto = true
strip = true
panic = "abort"
